tests/errors/sem.type-mismatch.bin-arith.or
main :: () -> void {
    1.5 + 1u;
};
